logs/noni.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/backports.ssl_match_hostname-3.5.0.1.egg-info'...
Listing './lib/python3.5/site-packages/backports_abc-0.4.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2016.2.28.dist-info'...
Listing './lib/python3.5/site-packages/noni'...
Listing './lib/python3.5/site-packages/noni/base'...
Compiling './lib/python3.5/site-packages/noni/base/constant.py'...
***   File "./lib/python3.5/site-packages/noni/base/constant.py", line 20
    raise ConstError, "can't change const. {0}".format(key)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/noni/config'...
Compiling './lib/python3.5/site-packages/noni/config/config_loader.py'...
***   File "./lib/python3.5/site-packages/noni/config/config_loader.py", line 32
    raise ConfigFileNotFoundError, "can't find config file: {0}".format(filename)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/noni/logger'...
Compiling './lib/python3.5/site-packages/noni/logger/logger.py'...
***   File "./lib/python3.5/site-packages/noni/logger/logger.py", line 35
    raise LoggerConfigFileNotFoundError, "can't find config file:{0}".format(filename)
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/noni/scrapy'...
Listing './lib/python3.5/site-packages/noni/tests'...
Listing './lib/python3.5/site-packages/noni/tests/test_base'...
Listing './lib/python3.5/site-packages/noni/tests/test_config'...
Listing './lib/python3.5/site-packages/noni/tests/test_logger'...
Listing './lib/python3.5/site-packages/noni/tests/test_scrapy'...
Listing './lib/python3.5/site-packages/noni/tests/test_tornado'...
Listing './lib/python3.5/site-packages/noni/tests/test_tornado/test_http_client'...
Compiling './lib/python3.5/site-packages/noni/tests/test_tornado/test_http_client/test_http_client.py'...
***   File "./lib/python3.5/site-packages/noni/tests/test_tornado/test_http_client/test_http_client.py", line 31
    print "hehehehh"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/noni/tests/test_twisted'...
Listing './lib/python3.5/site-packages/noni/tests/test_util'...
Listing './lib/python3.5/site-packages/noni/tornado'...
Listing './lib/python3.5/site-packages/noni/tornado/handler'...
Compiling './lib/python3.5/site-packages/noni/tornado/handler/base_handler.py'...
***   File "./lib/python3.5/site-packages/noni/tornado/handler/base_handler.py", line 27
    raise TornadoHandlerParameterError, str(error)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/noni/tornado/http_client'...
Compiling './lib/python3.5/site-packages/noni/tornado/http_client/http_client.py'...
***   File "./lib/python3.5/site-packages/noni/tornado/http_client/http_client.py", line 40
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/noni/tornado/timer'...
Compiling './lib/python3.5/site-packages/noni/tornado/timer/timer_manager.py'...
***   File "./lib/python3.5/site-packages/noni/tornado/timer/timer_manager.py", line 51
    raise TimerItemNotFoundError, "timer: {0} not exist!".format(name)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/noni/twisted'...
Listing './lib/python3.5/site-packages/noni/util'...
Listing './lib/python3.5/site-packages/noni-0.0.1.dev6.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/singledispatch-3.4.0.3.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.3.egg-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
